--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <link rel="stylesheet" type="text/css" href="blackjack.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body style="background: #04331b;">
         <div id="image" style="float:left;">
@@ -24,6 +24,6 @@
             <p id="cards-dealer">cards</p>
             <div id="flex-container-dealer"></div>
         </div>
-        <script src="blackjack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
